# snake

./: .gitignore  Cargo.toml  README.md  Session.vim
src/: game.rs  highscore.rs  main.rs  utils.rs
src/game/: apple.rs  snake.rs
