[package]
name = "snake"
version = "0.4.0"
edition = "2021"
description = "A Snake game for the Terminal"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
crossterm = "0.23.2"
clap = { version = "3.1.18", features = ["derive"] }

[profile.release]
opt-level = "z"
lto = true

